did the minimum assignment, will work on stretch goals tmrw

--- a/index.html
+++ b/index.html
@@ -3,14 +3,85 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1>
   <title>Great Idea - Responsive I</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chilanka&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <img class="logo-smallscreen" src="img/logo.png" alt="Great Idea! Company logo.">
+
+  <div class = "nav-wrapper">
+    <nav class="navitem">
+      <a href="services.html"> Services</a>
+      <p>Product</p>
+      <p>Vision</p>
+      <p>Features</p>
+      <a href="about.html">About</a>
+      <p>Contact</p>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </nav>
+</div>
+
+  <div class="titlesection">
+    <div class="titlesectionleft">
+      <h1>Innovation<br>On<br>Demand</h1>
+      <div class="start">
+        <p class="getstarted">Get Started</p>
+      </div>
+    </div>
+    <div class = "titlesectionright">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </div>
+ 
+  <div class = "linebreak"></div>  
+
+  <div class = "textblock">     
+    <div class="description">
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class="description">
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </div>
+
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <div class = "textblock">
+      <div class="description2">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="description2">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="description2">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>    
+  </div>
+  <div class = "linebreak"></div> 
+
+  <footer>
+    <h2>Contact</h2>
+    <address>
+    123 Way 456 Street <br> Somewhere, USA
+    </address>
+    <p>1 (888) 888-8888</p>
+    <br>
+    <p>sales@greatidea.io</p>
+  </footer>
+
+  <p class="copyright">Copyright Great Idea! 2018</p>
 </body>
 </html>
